# QRCodeApp

./: .gitignore  CMakeLists.txt  Info.plist  Main.qml  README.md  barcodegenerator.cpp  barcodegenerator.h  databasemanager.cpp  databasemanager.h  filepicker.h  filepicker.mm  main.cpp  pdfexporter.cpp  pdfexporter.h  pdfexporter.mm  qrcodegenerator.cpp  qrcodegenerator.h  qrimageprovider.cpp  qrimageprovider.h
